--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2,3 +2,13 @@
     color: #301035 !important;
     font-weight: 700;
 }
+#footer-content{
+    background-color: #000;
+    
+}
+#footer-content h5{
+    
+        color: #fff;
+        font-
+    
+}
